# Kyokai-front-end

./: .gitmodules  CMakeLists.txt
include/nlohmann/: json.hpp
include/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
include/nlohmann/detail/meta/: type_traits.hpp
include/nlohmann/detail/output/: serializer.hpp
src/: main.cpp
