cmake_minimum_required (VERSION 3.10)
set (CMAKE_CXX_STANDARD 17)
project (kyokai-front-end)
add_executable (kyokai-front-end src/main.cpp)
include_directories (include)
include(FetchContent)
FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/libcpr/cpr.git GIT_TAG f4622efcb59d84071ae11404ae61bd821c1c344b) # the commit hash for 1.6.2
FetchContent_MakeAvailable(cpr)
target_link_libraries(kyokai-front-end PRIVATE cpr::cpr)
set(MIRAI_CPP_BUILD_EXAMPLES OFF CACHE BOOL "Build examples" FORCE)
add_subdirectory(mirai-cpp)
add_executable(kyokai-front-end src/main.cpp)
include_directories(include)
target_link_libraries(kyokai-front-end PRIVATE mirai-cpp)
target_compile_definitions(kyokai-front-end PRIVATE MIRAICPP_STATICLIB)